# encodechka_leaderboard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
src/encodechka/: about.py  app.py  envs.py  parser.py  populate.py  settings.py
src/encodechka/display/: css_html_js.py  formatting.py  utils.py
src/encodechka/leaderboard/: read_evals.py
src/encodechka/submission/: check_validity.py  submit.py
tests/: test_parser.py
tests/cassettes/: test_parser.yaml
