[project]
name = "Encodechka"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roman Solomatin", email = "36135455+Samoed@users.noreply.github.com"},
]
dependencies = [
    "APScheduler>=3.10.4",
    #    "black",
    "click>=8.1.7",
    #    "datasets",
    "gradio>=4.36.1",
    "gradio-client>=1.0.1",
    "huggingface-hub>=0.18.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
    #    "transformers",
    #    "tokenizers>=0.15.0",
    #    "lm-eval @ git+https://github.com/EleutherAI/lm-evaluation-harness.git@b281b0921b636bc36ad05c0b0b0763bd6dd43463",
    #    "accelerate",
    #    "sentencepiece",
    "pyarrow>=16.1.0",
    "pydantic-settings>=2.3.3",
    "markdown>=3.6",
    "lxml>=5.2.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.4.8",
]
test = [
    "pytest>=8.2.2",
    "pytest-vcr>=1.0.2",
]


[tool.ruff]
fix = true
target-version = "py310"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select= [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff
    #"D",   # pydocstyle
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
